# xerxes-rp2040

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
cmake/: 4DI4DO-config.cmake  ABP-config.cmake  AnalogInput-config.cmake  BurstAI-config.cmake  Cutter-config.cmake  DiscreteAnalog-config.cmake  Encoder-config.cmake  LIS2-config.cmake  LightSound-config.cmake  SCL3300-config.cmake  SCL3300a-config.cmake  SCL3400-config.cmake  device-config.cmake  hx711-config.cmake  lis2dw12-config.cmake  lis2xy-config.cmake  temperature-config.cmake
src/: main.cpp
src/Buffer/: StatisticBuffer.hpp
src/Communication/: Callbacks.cpp  RS485.cpp
src/Core/: Definitions.h  Errors.h  Register.hpp  Slave.cpp
src/Hardware/: InitUtils.cpp  InitUtils.hpp  UserFlash.cpp
src/Hardware/Board/: xerxes_rp2040.h
src/Sensors/: Peripheral.hpp  SensorHeader.hpp  SensorHeader.hpp.in
src/Sensors/Generic/: AnalogInput.cpp  AnalogInput.hpp  hx711.cpp
src/Sensors/Honeywell/: ABP.cpp
src/Sensors/Murata/: SCL3300.cpp  SCL3X00.cpp
src/Sensors/ST/: Lis2dw12.cpp  Lis2dw12.hpp  Lis2xy.cpp  Lis2xy.hpp
src/Utils/: FFT.cpp  FFT.hpp  Gpio.cpp  Gpio.hpp  Log.h  Various.cpp  Various.hpp  Various.tpp
tests/pytest/: conftest.py
tests/pytest/CommonLeafTests/: test_address.py  test_read_vals.py  test_reset.py
utils/: build.sh  calibrate.py  change_address.py  discover.py  plot_burst.py  print_burst.py  read_5_leaves.py  read_lis2.py  read_pvs.py  test_and_log_jira.py  test_fft.py  test_high_speed.py
